Update bakery imagery across pages

--- a/assortiment.html
+++ b/assortiment.html
@@ -154,7 +154,7 @@
                 </div>
                 <div class="card-grid">
                     <article class="category-card">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Brood assortiment">
+                        <img src="https://images.unsplash.com/photo-1542838132-92c53300491e?auto=format&fit=crop&w=900&q=80" alt="Brood assortiment">
                         <div class="category-card-content">
                             <h3>Brood & desem</h3>
                             <p>Meergranen, volkoren, desem en glutenvrije varianten.</p>
@@ -162,7 +162,7 @@
                         </div>
                     </article>
                     <article class="category-card">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Banket assortiment">
+                        <img src="https://images.unsplash.com/photo-1504754524776-8f4f37790ca0?auto=format&fit=crop&w=900&q=80" alt="Banket assortiment">
                         <div class="category-card-content">
                             <h3>Banket & lekkernijen</h3>
                             <p>Koek, gebak en seizoensspecials met roomboter.</p>
@@ -170,7 +170,7 @@
                         </div>
                     </article>
                     <article class="category-card">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Taarten assortiment">
+                        <img src="https://images.unsplash.com/photo-1486427944299-d1955d23e34d?auto=format&fit=crop&w=900&q=80" alt="Taarten assortiment">
                         <div class="category-card-content">
                             <h3>Taarten op maat</h3>
                             <p>Van klassieke slagroomtaarten tot luxe chocolade.</p>
@@ -178,7 +178,7 @@
                         </div>
                     </article>
                     <article class="category-card">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Belegde broodjes">
+                        <img src="https://images.unsplash.com/photo-1540189549336-e6e99c3679fe?auto=format&fit=crop&w=900&q=80" alt="Belegde broodjes">
                         <div class="category-card-content">
                             <h3>Belegde broodjes</h3>
                             <p>Vers belegd met kaas, vleeswaren of vega opties.</p>
