--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                 </div>
             </div>
             <div class="hero-card">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Vers gebakken brood">
+                <img src="https://images.unsplash.com/photo-1489533119213-66a5cd877091?auto=format&fit=crop&w=1200&q=80" alt="Ambachtelijke bakkerij met vers brood">
                 <div class="hero-card-content">
                     <h3>Waarom klanten terugkomen</h3>
                     <ul>
@@ -538,7 +538,7 @@
             </div>
             <div class="highlight-grid">
                 <article class="highlight-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Dagvers brood">
+                    <img src="https://images.unsplash.com/photo-1509440159596-0249088772ff?auto=format&fit=crop&w=800&q=80" alt="Dagvers brood">
                     <div class="highlight-card-content">
                         <h4>Dagvers brood</h4>
                         <p>Krokant van buiten, zacht van binnen. Kies uit volkoren, desem en meergranen.</p>
@@ -546,7 +546,7 @@
                     </div>
                 </article>
                 <article class="highlight-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Banket">
+                    <img src="https://images.unsplash.com/photo-1512058564366-18510be2db19?auto=format&fit=crop&w=800&q=80" alt="Banket">
                     <div class="highlight-card-content">
                         <h4>Banket & lekkernijen</h4>
                         <p>Roomboterkoek, croissants en seizoensspecials die je dag maken.</p>
@@ -554,7 +554,7 @@
                     </div>
                 </article>
                 <article class="highlight-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Taarten">
+                    <img src="https://images.unsplash.com/photo-1464349095431-e9a21285b5f3?auto=format&fit=crop&w=800&q=80" alt="Taarten">
                     <div class="highlight-card-content">
                         <h4>Taarten op maat</h4>
                         <p>Van klassiek slagroom tot luxe chocolade. Ideaal voor elke gelegenheid.</p>
@@ -562,7 +562,7 @@
                     </div>
                 </article>
                 <article class="highlight-card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Belegde broodjes">
+                    <img src="https://images.unsplash.com/photo-1528735602780-2552fd46c7af?auto=format&fit=crop&w=800&q=80" alt="Belegde broodjes">
                     <div class="highlight-card-content">
                         <h4>Belegde broodjes</h4>
                         <p>Vers belegd en snel klaar. Perfect voor lunch of een meeting.</p>
