--- a/taarten.html
+++ b/taarten.html
@@ -150,7 +150,7 @@
                 </div>
                 <div class="cake-grid">
                     <article class="cake-card">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Slagroomtaart">
+                        <img src="https://images.unsplash.com/photo-1514056052883-d017fddd0426?auto=format&fit=crop&w=900&q=80" alt="Slagroomtaart">
                         <div class="cake-card-content">
                             <h3>Slagroomklassieker</h3>
                             <p>Luchtige slagroom, verse aardbeien en zachte cake.</p>
@@ -158,7 +158,7 @@
                         </div>
                     </article>
                     <article class="cake-card">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Chocoladetaart">
+                        <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?auto=format&fit=crop&w=900&q=80" alt="Chocoladetaart">
                         <div class="cake-card-content">
                             <h3>Chocolade luxe</h3>
                             <p>Voor liefhebbers van pure chocolade en rijke vulling.</p>
@@ -166,7 +166,7 @@
                         </div>
                     </article>
                     <article class="cake-card">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4c/Bakkerij_De_Korenaar._Surhuisterveen.JPG" alt="Fruitige taart">
+                        <img src="https://images.unsplash.com/photo-1505253716362-afaea1d3d1af?auto=format&fit=crop&w=900&q=80" alt="Fruitige taart">
                         <div class="cake-card-content">
                             <h3>Fruitig & fris</h3>
                             <p>Seizoensfruit, lichte room en een krokante bodem.</p>
