Update branding and align page headers

--- a/bestel.html
+++ b/bestel.html
@@ -1031,16 +1031,12 @@
     <div class="top-bar">
         <div class="top-bar-content">
             <div class="top-bar-item">
-                <i class="fas fa-truck"></i>
-                <span>Gratis bezorging vanaf €30</span>
+                <i class="fas fa-phone"></i>
+                <span>+31 512 361 262</span>
             </div>
             <div class="top-bar-item">
                 <i class="fas fa-clock"></i>
-                <span>Bestel voor 18:00u, morgen geleverd</span>
-            </div>
-            <div class="top-bar-item">
-                <i class="fas fa-phone"></i>
-                <span>0512 361 262</span>
+                <span>Ma - Za: 07:00 - 18:00</span>
             </div>
         </div>
     </div>
@@ -1299,7 +1295,7 @@
             // Banket
             { id: 17, name: 'Croissant', price: 1.95, category: 'banket', description: 'Krokante Franse croissant', image: 'https://images.unsplash.com/photo-1509365465985-25d11c17e812?auto=format&fit=crop&w=800&q=80' },
             { id: 18, name: 'Koffiebroodje', price: 2.45, category: 'banket', description: 'Met amandelspijs gevuld', image: 'https://images.unsplash.com/photo-1504754524776-8f4f37790ca0?auto=format&fit=crop&w=800&q=80' },
-            { id: 19, name: 'Roomboterkoek', price: 8.95, category: 'banket', description: 'Hele koek met pure roomboter', image: 'https://images.unsplash.com/photo-1512058564366-18510be2db19?auto=format&fit=crop&w=800&q=80' },
+            { id: 19, name: 'Roomboterkoek', price: 8.95, category: 'banket', description: 'Hele koek met pure roomboter', image: 'https://images.unsplash.com/photo-1486427944299-d1955d23e34d?auto=format&fit=crop&w=800&q=80' },
 
             // Taarten
             { id: 20, name: 'Slagroomtaart', price: 24.95, category: 'taarten', description: 'Klassieke slagroomtaart, 8 personen', image: 'https://images.unsplash.com/photo-1514056052883-d017fddd0426?auto=format&fit=crop&w=800&q=80' },
