--- a/zakelijk.html
+++ b/zakelijk.html
@@ -51,16 +51,12 @@
     <div class="top-bar">
         <div class="top-bar-content">
             <div class="top-bar-item">
-                <i class="fas fa-truck"></i>
-                <span>Gratis bezorging vanaf €30</span>
+                <i class="fas fa-phone"></i>
+                <span>+31 512 361 262</span>
             </div>
             <div class="top-bar-item">
                 <i class="fas fa-clock"></i>
-                <span>Bestel voor 18:00u, morgen geleverd</span>
-            </div>
-            <div class="top-bar-item">
-                <i class="fas fa-phone"></i>
-                <span>0512 361 262</span>
+                <span>Ma - Za: 07:00 - 18:00</span>
             </div>
         </div>
     </div>
@@ -104,15 +100,7 @@
             </nav>
 
             <div class="header-actions">
-                <a href="tel:0512361262" class="header-btn btn-secondary">
-                    <i class="fas fa-phone"></i>
-                    <span>Bel ons</span>
-                </a>
-                <button class="header-btn btn-cart">
-                    <i class="fas fa-shopping-cart"></i>
-                    <span>Winkelwagen</span>
-                    <span class="cart-count">0</span>
-                </button>
+                <a href="bestel.html" class="header-btn btn-primary">Bestellen</a>
             </div>
         </div>
     </header>
