--- a/index.html
+++ b/index.html
@@ -32,20 +32,31 @@
                 <div class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                 </div>
-                <div class="nav-item">
-                    <a class="nav-link" href="assortiment.html">Bakery</a>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="assortiment.html">Assortiment <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="brood.html">Brood</a>
+                        <a href="banket.html">Banket</a>
+                        <a href="taarten.html">Taarten</a>
+                        <a href="belegde-broodjes.html">Belegde broodjes</a>
+                    </div>
                 </div>
-                <div class="nav-item">
-                    <a class="nav-link" href="zakelijk.html">Local food</a>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="bestel.html">Bestellen <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="bezorging.html">Bezorging</a>
+                    </div>
                 </div>
-                <div class="nav-item">
-                    <a class="nav-link" href="bezorging.html">Catering support</a>
+                <div class="nav-item has-dropdown">
+                    <a class="nav-link" href="over-ons.html">Over ons <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-menu">
+                        <a href="over-ons.html">Onze bakkerij</a>
+                        <a href="zakelijk.html">Zakelijk</a>
+                        <a href="allergenen.html">Allergenen</a>
+                    </div>
                 </div>
                 <div class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
-                </div>
-                <div class="nav-item">
-                    <a class="nav-link" href="over-ons.html">Over ons</a>
                 </div>
             </nav>
             <div class="header-actions">
@@ -58,7 +69,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="eyebrow">Lorem ipsum dolor sit amet</div>
-                <h1>B&amp;B ambachtelijke bakkerij</h1>
+                <h1>Bakkerij de Korenaar</h1>
                 <div class="hero-actions">
                     <a class="header-btn btn-secondary" href="assortiment.html">Meer over ons</a>
                     <a class="header-btn btn-outline" href="bestel.html">Neem contact op</a>
@@ -140,33 +151,33 @@
             </div>
             <div class="service-grid">
                 <article class="service-card">
-                    <img src="https://images.unsplash.com/photo-1512058564366-18510be2db19?auto=format&fit=crop&w=800&q=80" alt="B&amp;B Bakery">
+                    <img src="https://images.unsplash.com/photo-1509440159596-0249088772ff?auto=format&fit=crop&w=800&q=80" alt="Bakkerij de Korenaar">
                     <div class="service-card-content">
-                        <h4>B&amp;B Bakery</h4>
+                        <h4>Bakkerij de Korenaar</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <a href="assortiment.html">Lees meer</a>
                     </div>
                 </article>
                 <article class="service-card">
-                    <img src="https://images.unsplash.com/photo-1483695028939-5bb13f8648b0?auto=format&fit=crop&w=800&q=80" alt="B&amp;B Local food">
+                    <img src="https://images.unsplash.com/photo-1549931319-a545dcf3bc73?auto=format&fit=crop&w=800&q=80" alt="Bakkerij de Korenaar lokaal">
                     <div class="service-card-content">
-                        <h4>B&amp;B Local food</h4>
+                        <h4>Bakkerij de Korenaar lokaal</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <a href="zakelijk.html">Lees meer</a>
                     </div>
                 </article>
                 <article class="service-card">
-                    <img src="https://images.unsplash.com/photo-1464349095431-e9a21285b5f3?auto=format&fit=crop&w=800&q=80" alt="B&amp;B Catering support">
+                    <img src="https://images.unsplash.com/photo-1542838132-92c53300491e?auto=format&fit=crop&w=800&q=80" alt="Bakkerij de Korenaar catering">
                     <div class="service-card-content">
-                        <h4>B&amp;B Catering support</h4>
+                        <h4>Bakkerij de Korenaar catering</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <a href="bezorging.html">Lees meer</a>
                     </div>
                 </article>
                 <article class="service-card">
-                    <img src="https://images.unsplash.com/photo-1466978913421-dad2ebd01d17?auto=format&fit=crop&w=800&q=80" alt="B&amp;B Event">
+                    <img src="https://images.unsplash.com/photo-1509440159596-0249088772ff?auto=format&fit=crop&w=800&q=80" alt="Bakkerij de Korenaar event">
                     <div class="service-card-content">
-                        <h4>B&amp;B Event</h4>
+                        <h4>Bakkerij de Korenaar event</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <a href="contact.html">Lees meer</a>
                     </div>
@@ -239,7 +250,7 @@
                     <p>9231 AS Surhuisterveen</p>
                 </div>
                 <div class="footer-section">
-                    <h4>B&amp;B</h4>
+                    <h4>Bakkerij de Korenaar</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                 <div class="footer-section">
