Update homepage focus for orders

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <div class="eyebrow">Lorem ipsum dolor sit amet</div>
-                <h1>Bakkerij de Korenaar</h1>
+                <div class="eyebrow">Bestel online & laat bezorgen</div>
+                <h1>Ambachtelijke taarten en broodjes, voor thuis en op kantoor</h1>
                 <div class="hero-actions">
-                    <a class="header-btn btn-secondary" href="assortiment.html">Meer over ons</a>
-                    <a class="header-btn btn-outline" href="bestel.html">Neem contact op</a>
+                    <a class="header-btn btn-secondary" href="taarten.html">Taart bestellen</a>
+                    <a class="header-btn btn-outline" href="bezorging.html">Broodjes bezorgen</a>
                 </div>
             </div>
         </div>
@@ -88,10 +88,10 @@
                 </div>
             </div>
             <div class="text-panel">
-                <span class="eyebrow">Bakkerij</span>
-                <h3>Lorem ipsum dolor sit amet</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-                <a class="header-btn btn-primary" href="over-ons.html">Meer over ons</a>
+                <span class="eyebrow">Voor particulier & zakelijk</span>
+                <h3>Van verjaardagstaart tot zakelijke lunch</h3>
+                <p>Bestel je als particulier of namens een bedrijf? We denken graag mee. Kies je favoriete taart, laat broodjes bezorgen op kantoor en reken eenvoudig af.</p>
+                <a class="header-btn btn-primary" href="bestel.html">Direct bestellen</a>
             </div>
         </div>
     </section>
@@ -99,32 +99,32 @@
     <section class="section">
         <div class="container">
             <div class="section-title">
-                <span>Bakkers</span>
-                <h2>Lorem ipsum dolor sit amet</h2>
+                <span>Bestelgemak</span>
+                <h2>Taart bestellen en broodjes bezorgen</h2>
             </div>
             <div class="product-grid">
                 <article class="product-card">
                     <img src="https://images.unsplash.com/photo-1549931319-a545dcf3bc73?auto=format&fit=crop&w=600&q=80" alt="Brood">
-                    <h4>Brood</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                    <h4>Taarten op maat</h4>
+                    <p>Van verjaardag tot jubileum, bestel jouw taart online.</p>
                     <span class="icon-btn"><i class="fas fa-arrow-right"></i></span>
                 </article>
                 <article class="product-card">
                     <img src="https://images.unsplash.com/photo-1483695028939-5bb13f8648b0?auto=format&fit=crop&w=600&q=80" alt="Banket">
-                    <h4>Banket</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                    <h4>Broodjes bezorgen</h4>
+                    <p>Verse belegde broodjes, bezorgd op locatie.</p>
                     <span class="icon-btn"><i class="fas fa-arrow-right"></i></span>
                 </article>
                 <article class="product-card">
                     <img src="https://images.unsplash.com/photo-1509440159596-0249088772ff?auto=format&fit=crop&w=600&q=80" alt="Belegde broodjes">
-                    <h4>Belegde broodjes</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                    <h4>Particulier</h4>
+                    <p>Bestel snel voor thuis, feest of familie.</p>
                     <span class="icon-btn"><i class="fas fa-arrow-right"></i></span>
                 </article>
                 <article class="product-card">
                     <img src="https://images.unsplash.com/photo-1414235077428-338989a2e8c0?auto=format&fit=crop&w=600&q=80" alt="Meer">
-                    <h4>Meer</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                    <h4>Zakelijk</h4>
+                    <p>Ontbijt, lunch en traktaties voor teams en klanten.</p>
                     <span class="icon-btn"><i class="fas fa-arrow-right"></i></span>
                 </article>
             </div>
@@ -135,8 +135,8 @@
         <div class="container">
             <div class="promo-banner">
                 <div class="promo-banner-content">
-                    <span class="eyebrow">Full bakery</span>
-                    <h2>Alles altijd vers bereid lorem ipsum dolor.</h2>
+                    <span class="eyebrow">Altijd vers</span>
+                    <h2>Bestel taarten en broodjes met bezorging in Surhuisterveen.</h2>
                 </div>
             </div>
         </div>
@@ -145,41 +145,41 @@
     <section class="section">
         <div class="container split-feature">
             <div>
-                <span class="eyebrow">Assortiment</span>
-                <h2>Lorem ipsum dolor sit amet</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                <span class="eyebrow">Bestellen</span>
+                <h2>Kies je route: particulier of zakelijk</h2>
+                <p>We maken bestellen overzichtelijk. Voor thuis kies je snel je taart of broodjes, voor bedrijven regelen we grotere aantallen en vaste bezorgmomenten.</p>
             </div>
             <div class="service-grid">
                 <article class="service-card">
                     <img src="https://images.unsplash.com/photo-1509440159596-0249088772ff?auto=format&fit=crop&w=800&q=80" alt="Bakkerij de Korenaar">
                     <div class="service-card-content">
-                        <h4>Bakkerij de Korenaar</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="assortiment.html">Lees meer</a>
+                        <h4>Taart bestellen</h4>
+                        <p>Van klassiek tot custom: kies je smaak en formaat.</p>
+                        <a href="taarten.html">Bekijk taarten</a>
                     </div>
                 </article>
                 <article class="service-card">
                     <img src="https://images.unsplash.com/photo-1549931319-a545dcf3bc73?auto=format&fit=crop&w=800&q=80" alt="Bakkerij de Korenaar lokaal">
                     <div class="service-card-content">
-                        <h4>Bakkerij de Korenaar lokaal</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="zakelijk.html">Lees meer</a>
+                        <h4>Broodjes bezorgen</h4>
+                        <p>Verse belegde broodjes, verzorgd bezorgd.</p>
+                        <a href="bezorging.html">Bekijk bezorging</a>
                     </div>
                 </article>
                 <article class="service-card">
                     <img src="https://images.unsplash.com/photo-1542838132-92c53300491e?auto=format&fit=crop&w=800&q=80" alt="Bakkerij de Korenaar catering">
                     <div class="service-card-content">
-                        <h4>Bakkerij de Korenaar catering</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="bezorging.html">Lees meer</a>
+                        <h4>Particulier</h4>
+                        <p>Voor verjaardagen, feestdagen en elke dag lekker.</p>
+                        <a href="assortiment.html">Shop voor thuis</a>
                     </div>
                 </article>
                 <article class="service-card">
                     <img src="https://images.unsplash.com/photo-1509440159596-0249088772ff?auto=format&fit=crop&w=800&q=80" alt="Bakkerij de Korenaar event">
                     <div class="service-card-content">
-                        <h4>Bakkerij de Korenaar event</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="contact.html">Lees meer</a>
+                        <h4>Zakelijk</h4>
+                        <p>Lunches, meetings en traktaties voor bedrijven.</p>
+                        <a href="zakelijk.html">Zakelijk bestellen</a>
                     </div>
                 </article>
             </div>
@@ -189,16 +189,16 @@
     <section class="section">
         <div class="container split-feature">
             <div class="feature-card">
-                <span class="eyebrow">De lekkerste broodjes</span>
-                <h3>Lorem ipsum dolor sit amet</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore.</p>
-                <a class="header-btn btn-primary" href="assortiment.html">Bekijk assortiment</a>
+                <span class="eyebrow">Taart & broodjes</span>
+                <h3>Plan je bestelling in een paar klikken</h3>
+                <p>Bestel je taart of broodjes eenvoudig online en kies afhalen of bezorging.</p>
+                <a class="header-btn btn-primary" href="bestel.html">Bestel nu</a>
             </div>
             <div class="feature-card" style="background: var(--primary-dark); color: var(--white);">
-                <span class="eyebrow" style="color: var(--accent);">Heb je een andere vraag?</span>
-                <h3>Neem contact op</h3>
-                <p style="color: rgba(255,255,255,0.75);">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt.</p>
-                <a class="header-btn btn-outline" href="contact.html">Neem contact op</a>
+                <span class="eyebrow" style="color: var(--accent);">Zakelijk of particulier?</span>
+                <h3>Wij denken mee met jouw moment</h3>
+                <p style="color: rgba(255,255,255,0.75);">Van een kleine bestelling tot bedrijfslunch: vertel ons je wensen.</p>
+                <a class="header-btn btn-outline" href="zakelijk.html">Bekijk zakelijk</a>
             </div>
         </div>
     </section>
@@ -235,7 +235,7 @@
     <section class="section" style="padding-bottom: var(--space-8);">
         <div class="container">
             <div class="brand-bar">JUMBO JUMBO JUMBO JUMBO JUMBO</div>
-            <p style="text-align:center; margin-top: var(--space-4); color: var(--gray-500);">We hebben meer dan 300 bedrijven geholpen aan onze horeca. Wil jij hier ook bij horen? Neem dan contact met ons op.</p>
+            <p style="text-align:center; margin-top: var(--space-4); color: var(--gray-500);">We helpen dagelijks particulieren én bedrijven met vers gebak, taarten en broodjes. Zakelijk bestellen? Neem contact met ons op.</p>
         </div>
     </section>
 
