--- a/bestel.html
+++ b/bestel.html
@@ -95,17 +95,18 @@
         .top-bar {
             background: var(--primary-dark);
             color: var(--white);
-            padding: var(--space-3) var(--space-4);
-            font-size: var(--text-sm);
+            padding: var(--space-2) var(--space-4);
+            font-size: var(--text-xs);
+            letter-spacing: 0.02em;
         }
 
         .top-bar-content {
             max-width: var(--max-width);
             margin: 0 auto;
             display: flex;
-            justify-content: center;
+            justify-content: flex-end;
             align-items: center;
-            gap: var(--space-8);
+            gap: var(--space-6);
             flex-wrap: wrap;
         }
 
@@ -116,8 +117,7 @@
         }
 
         .top-bar-item i {
-            font-size: var(--text-sm);
-            color: #FFD700;
+            color: var(--accent);
         }
 
         /* Header - Cleaner */
